res/css/news.css
/* ========== Main Container ========== */

.main-container {
	max-width: 840px;
	margin: 0 auto;
	margin-top:72px;
	margin-bottom: 50px;
}



/* ========== Article Admin panel ========== */

.adminPanelCard {
	background: #333333;
	height: 48px;
	border-radius: 2px;
	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
	box-sizing: border-box;
	padding: 0 24px;
	padding-right: 6px;
	margin-top: 90px;
	
	display: none;
}

.publishToggleContainer {
	height: 48px;
	float: left;
	padding-top: 15px;
	box-sizing: border-box;
	width: 229px;
	border-right: 1px solid rgba(255, 255, 255, 0.1);
	user-select: none;
}

.unpublishedLabelTxt,
.publishToggle {
	float: left;
	color: rgba(0, 0, 0, 0.54);
	font-size: 14px;
	font-weight: 400;
	padding-right: 12px;
}

.unpublishedLabelTxt {
	color: #E57373;
	padding-top: 1px;
	position: absolute;
	left: -92px;
}

.editArticleBtn {
	float: right;
	margin-top: 6px;
	height: 36px;
	padding: 0 16px;
	line-height: 37px;
	border-radius: 2px;
	color: #FFEB3B;
	text-transform: uppercase;
	font-size: 14px;
	font-weight: 500;
	user-select: none;
}

.editArticleBtn a {
	color: #FFEB3B;
	text-decoration: none;
}

.editArticleBtn:hover {
	background: rgba(255, 255, 255, 0.1);
	cursor: pointer;
}

.editArticleBtn:active {
	background: rgba(255, 255, 255, 0.22);
	cursor: pointer;
}

.InfoTextAdminPanel {
	text-align: center;
	margin: 0 auto;
	padding-top: 16px;
	font-size: 14px;
	color: rgba(255, 255, 255, 0.36);
	font-weight: 400;
}

.toggle {
	position: relative;
	margin-left: 90px;
}

.toggle input[type=checkbox] {
	display: none;
}

.toggle label {
	cursor: pointer;
}

.toggle label .text {
	padding-left: 50px;
	color: rgba(255, 255, 255, 0.36);
	top: 1px;
	position: absolute;
}

.toggle label .slot {
	position: absolute;
	top: 3px;
	left: 2px;
	width: 32px;
	height: 14px;
	background-color: #717171;
	border-radius: 13px;
	transition: all 0.3s ease-in-out;
}

.toggle label .lever {
	position: absolute;
	width: 20px;
	height: 20px;
	background-color: #bdbdbd;
	border-radius: 20px;
	box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.75);
	z-index: 1;
	transition: all 0.3s ease-in-out;
	left: 0;
}

.toggle input[type=checkbox]:checked ~ label .slot {
	background-color: rgba(77, 208, 225, 0.5);
}

.toggle input[type=checkbox]:checked ~ label .lever {
	background-color: #4DD0E1;
	left: 17px;
}

.toggle input[type=checkbox]:checked ~ label .text {
	color: #4DD0E1;
}

.toggle input[type=checkbox]:checked ~ .unpublishedLabelTxt {
	color: rgba(255, 255, 255, 0.36);
}



/* ========== Vote Container ========== */

/*.vote-container {
	height: auto;
	width: auto;
	position: absolute;
	top: 125px;
	margin-left: -100px;
}

.vote-container button {
	width: 42px;
	height: 42px;
	border: none;
	outline: none;
	text-shadow: none;
	box-shadow: none;
	border-radius: 50px;
	background: none;
	color: #9E9E9E;
}

.vote-container button:hover {
	cursor: pointer;
	color: #757575;
}

.vote-container button:active {
	background: #fafafa;
}

.vote-container button.voteNotActive:active,
.vote-container button.voteNotActive:hover {
	background: none;
	cursor: default;
}

.vote-container button.downVote {
	color: #eee !important;
}

.vote-container .likes {
	min-width: 42px;
	text-align: center;
	padding: 2px 0;
	font-size: 18px;
	font-weight: 500;
	text-transform: uppercase;
	color: #AAAAAA;
}*/



/* ========== Article top section ========== */

.article-header h1 {
	text-align: center;
	font-weight: 300;
	font-size: 44px;
	line-height: 56px;
	position: relative;
	color: #555;
	padding: 32px 0;
	margin: 0;
	border-bottom: 1px solid #E0E0E0;
	font-family: 'Roboto slab', sans-serif;
}


/* Article info */

.articleInfoBar {
    font-size: 14px;
    font-weight: 500;
    color: #9E9E9E;
    padding: 0 2px;
    height: 64px;
    line-height: 63px;
    position: relative;
}

.articleInfoBar a {
	text-decoration: none;
}

.articleInfoBarLeftContainer {
	float: left;
}

.articleInfoBarRightContainer {
	float: right;
}

.articleInfoBarLeftContainer .articleInfoAuthor,
.articleInfoBarLeftContainer .articleInfoPostTime,
.articleInfoBarLeftContainer .articleInfoTags,
.articleInfoBarLeftContainer .articleTopSectionSep,
.articleInfoBarRightContainer .articleInfoLikes,
.articleInfoBarRightContainer .articleInfoLikesBtn {
	display: inline-block;
}

.articleInfoBarLeftContainer .articleTopSectionSep {
	margin: 0 6px;
}

.articleInfoBarLeftContainer .articleInfoAuthor a {
	color: #6472cd;
	text-decoration: none;
	margin-left: 4px;
}

.articleInfoBarLeftContainer .articleInfoAuthor a:hover {
	color: #505ba4;
	cursor: pointer;
}

.articleInfoBarLeftContainer .articleInfoTags a {
	color: #ffffff;
	margin-right: 6px;
	padding: 2px 8px;
	border-radius: 20px;
	background: #BDBDBD;
	-webkit-transition: all 150ms ease-in-out;
	-moz-transition: all 150ms ease-in-out;
	-ms-transition: all 150ms ease-in-out;
	-o-transition: all 150ms ease-in-out;
	transition: all 150ms ease-in-out;
}

.articleInfoBarLeftContainer .articleInfoTags a:hover {
	cursor: pointer;
	background: #9E9E9E;
}


/* Tag colors (1 to 4) */

.articleInfoBarLeftContainer .articleInfoTags a:nth-child(1) {
	background: #FFCA28;
}

.articleInfoBarLeftContainer .articleInfoTags a:nth-child(1):hover {
	background: #FFC107;
}

.articleInfoBarLeftContainer .articleInfoTags a:nth-child(2) {
	background: #AB47BC;
}

.articleInfoBarLeftContainer .articleInfoTags a:nth-child(2):hover {
	background: #9C27B0;
}

.articleInfoBarLeftContainer .articleInfoTags a:nth-child(3) {
	background: #26C6DA;
}

.articleInfoBarLeftContainer .articleInfoTags a:nth-child(3):hover {
	background: #00BCD4;
}

.articleInfoBarLeftContainer .articleInfoTags a:nth-child(4) {
	background: #EC407A;
}

.articleInfoBarLeftContainer .articleInfoTags a:nth-child(4):hover {
	background: #E91E63;
}


.articleInfoBarRightContainer .articleInfoLikes {
	font-size: 16px;
	margin-right: 6px;
}

.articleInfoBarRightContainer .articleInfoLikesBtn {
	line-height: normal;
	float: right;
	margin-top: 17px;
}

.articleInfoBarRightContainer .articleInfoLikesBtn i {
	margin-right: 4px;
	font-size: 22px;
	cursor: pointer;
	border-radius: 20px;
	padding: 4px;
	-webkit-transition: all 150ms ease-in-out;
	-moz-transition: all 150ms ease-in-out;
	-ms-transition: all 150ms ease-in-out;
	-o-transition: all 150ms ease-in-out;
	transition: all 150ms ease-in-out;
}

.articleInfoBarRightContainer .articleInfoLikesBtn i:hover {
	color: #F44336;
}

.articleInfoBarRightContainer .articleInfoLikesBtn i:active {
	background: #eee;
}



/* ========== Article image ========== */

.article-image img {
    width: 100%;
}



/* ========== Article content ========== */

.article-content {
	padding: 30px 0 20px 0;
	color: #333;
}

.article-content p {
	margin: 0 0 25px 0;
	text-align: left;
	font-size: 18px;
	line-height: 31px;
	color: rgba(0, 0, 0, 0.72);
	padding: 0 16px;
	font-weight: normal;
}



/* ========== Article source (From/via) ========== */

.fromvia {
    color: #8A8A8A;
    font-size: 16px;
    padding: 0 0 30px 0;
}

.fromvia a {
    color: #03a9f4;
    text-decoration: none;
    -webkit-transition: all 150ms ease-in-out;
    -moz-transition: all 150ms ease-in-out;
    -ms-transition: all 150ms ease-in-out;
    -o-transition: all 150ms ease-in-out;
    transition: all 150ms ease-in-out;
}

.fromvia a:hover {
	color: #29B6F6;
}



/* ========== Share section (Social links) ========== */

.share-article {
    height: 98px;
    width: 100%;
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;
    border-top: 1px solid #E0E0E0;
    border-bottom: 1px solid #E0E0E0;
    position: relative;
}

.share-article .share-txt,
.share-article .share-links {
    float: left;
}

.share-article .share-txt {
	color: rgba(0, 0, 0, 0.54);
	font-size: 18px;
	line-height: 98px;
	padding-right: 42px;
	text-align: right;
	width: 50%;
	box-sizing: border-box;
}

.share-article .share-links {
	margin: 0;
	height: 100px;
	width: 50%;
	box-sizing: border-box;
	text-align: left;
	padding-top: 28px;
	padding-left: 42px;
}

.share-article .share-links img {
    width: 42px;
    margin: 0 10px;
}

.share-article .share-links a {
    text-decoration: none;
}

.share-article .share-links img:hover {
    opacity: .87;
}



/* ========== Comments ========== */

.comment-section {
	background: #fff;
	width: 100%;
	min-height: 300px;
	max-width: 840px;
	margin: 0 auto;
	margin-bottom: 30px;
}



/* ========== Tooltip Styles ========== */

[data-tooltip] {
    position: relative;
    z-index: 2;
    cursor: pointer;
}


/* Hide the tooltip content by default */

[data-tooltip]:before,
[data-tooltip]:after {
    visibility: hidden;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
    pointer-events: none;
}


/* Position tooltip below the element */

[data-tooltip]:before {
	position: absolute;
	top: 37px;
	left: 50%;
	margin-top: 5px;
	margin-left: -142px;
	padding: 10px 16px;
	width: 182px;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 3px;
	background-color: #212121;
	color: #9E9E9E;
	content: attr(data-tooltip);
	font-size: 14px;
	line-height: 20px;
	text-align: left;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}


/* Show tooltip content on hover */

[data-tooltip]:hover:before,
[data-tooltip]:hover:after {
    visibility: visible;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}



/*======= Button ripple effect =======*/

/* WIP */



/* ========== Media Queries ========== */

@media screen and (max-width: 840px) {
	
	.adminPanelCard {
		width: 100%;
		border-radius: 0;
		box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
		margin-top: 56px;
	}
    
    .header-extention {
        display: none;
    }
    
    .vote-container {
        display: none;
    }
    
    .main-container {
        box-shadow: none;
        margin-top: 56px;
        margin-bottom: 0;
    }
    
    .article-header h1 {
        font-size: 28px;
        line-height: 32px;
        padding: 30px 10px 20px 10px;
    }
    
    .articleInfoBar {	/* Make it responsive!*/
		padding: 0 16px;
    }
    
    .article-content {
        padding: 20px 15px 15px 15px;
    }
    
    .article-content p {
        font-size: 16px;
        margin: 0 0 20px 0;
    }
    
    .fromvia {
        font-size: 15px;
        padding: 0 0 20px 15px;
    }
    
    .share-article {
        height: 150px;
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
    }
    
    .share-article .share-txt {
        padding-left: 0;
        text-align: center;
        width: 100%;
        line-height: 75px;
        font-size: 20px;
		padding-right: 0;
    }
    
    .share-article .share-links {
        margin: 0 auto;
		width: 100%;
		text-align: center;
		padding: 0;
		height: 74px;
    }
    
    .share-article .share-links img {
        float: none;
    }
	
	.comment-section {
		width: 95%;
		padding-top: 24px;
	}

}

@media screen and (max-width: 600px) {
	
	.article-header h1 {
		padding: 30px 15px;
	}
	
	.resp-name-logo {
		font-weight: 400;
	}
	
	.InfoTextAdminPanel {
		display: none;
	}
	
	.articleInfoBar {
		line-height: 24px;
		padding-top: 12px;
		box-sizing: border-box;
		height: 48px;
		font-size: 13px;
	}
	
	.articleInfoBarRightContainer .articleInfoLikesBtn {
		margin-top: -3px;
	}
	
	.articleInfoBarRightContainer {
		background: white;
		position: absolute;
		right: 8px;
		top: 80px;
		padding: 4px;
		border-radius: 2px;
		box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
		padding-top: 8px;
		padding-left: 12px;
	}
	
	.articleInfoTags {
		width: 100%;
		margin-bottom: 4px;
		padding: 4px 0;
		box-sizing: border-box;
	}
	
}

